# buzz

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.push-gateway  Justfile  NOSTR.md  README.md  RELEASING.md  SECURITY.md  TESTING.md  VISION.md  VISION_ACTIVITY.md  VISION_AGENT.md  VISION_MESH.md  VISION_PROJECTS.md  VISION_SOVEREIGN.md  biome.json  deny.toml  features.json  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preview-features.json  terms.md
.github/workflows/: auto-tag-on-release-pr-merge.yml  ci.yml  docker.yml  helm-chart.yml  push-gateway-helm-chart.yml  release.yml  sprig.yml  sync-release-changelog.yml
.intersect/: sadscan.yaml
WORK_LOGS/: TANSTACK_TIMELINE_SPIKE_CLASSIFIER_2026_07_09.md
buzz-eval-notes/: README.md  hosting-plan.md  try-it-in-an-afternoon.md
crates/buzz-acp/: Cargo.toml  README.md
crates/sprig/: Cargo.toml
crates/sprig/src/: main.rs
crates/sprout-mcp/: Cargo.toml
crates/sprout-mcp/src/: main.rs  relay_client.rs  server.rs  upload.rs
desktop/: index.html  package.json  playwright.config.ts  portable-classifier.pwconfig.ts  test-loader-hooks.mjs  tsconfig.json
docs/: README.md  mesh-share-compute-shared-models.md  multi-tenant-conformance.md  multi-tenant-relay.md  push-gateway-deployment.md  welcome-kickoff-silent-failures.md
migrations/: 0001_initial_schema.sql  0001_relay_members.sql  0014_push_lease_fts.sql  0022_push_wake_outbox_retention.sql
mobile/: CHANGELOG.md  README.md  pubspec.yaml
perf/: RELAY_BUS_SCALING.md  relay_bus_scaling.py  test_relay_bus_scaling.py
schema/: schema.sql
scripts/: attach-schema-partitions.sql  build-sprig.sh  bundle-sidecars.sh  dev-setup.sh  e2e-git-perms.sh  e2e-relay-membership.sh  instance-env.sh  post-screenshots.sh  run-tests.sh  start-relay-for-tests.sh
web/: index.html  package.json  tailwind.config.js
(+1181 files in other folders)
